--- a/data_collecting.ipynb
+++ b/data_collecting.ipynb
@@ -38,7 +38,7 @@
    "id": "50ff677e",
    "metadata": {},
    "source": [
-    "- Chúng em sẽ thu thập dữ liệu thông qua api do trang https://openweathermap.org đã cung cấp sẵn và lưu và biến data.\n",
+    "- Chúng em sẽ thu thập dữ liệu thông qua api do trang https://openweathermap.org đã cung cấp sẵn và lưu và biến data\n",
     "    \n",
     "\n",
     "- Mãu Api: http://api.openweathermap.org/data/2.5/air_pollution/history?lat={lat}&lon={lon}&start={start}&end={end}&appid={APIkey}\n",
