Update new model file

--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "76ba493d",
+   "id": "3d9eeb49",
    "metadata": {},
    "source": [
     "## Import các thư viện cần thiết"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c9524d5d",
+   "id": "95a1dcc6",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9abbb7b3",
+   "id": "55e986a6",
    "metadata": {},
    "source": [
     "## Chuẩn bị dữ liệu"
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "033337ba",
+   "id": "cbe850ba",
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ad522711",
+   "id": "ddbaaf32",
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6132dddc",
+   "id": "d2cde180",
    "metadata": {},
    "source": [
     "## Huấn luyện mô hình"
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1473ea43",
+   "id": "ba0836d1",
    "metadata": {},
    "source": [
     "**Lựa chọn thuộc tính:** chúng em sẽ tiến hành phân loại chất lượng không khí theo chỉ số `aqi` dựa trên các chỉ số `no, co, so2, no2, o3, pm2_5, pm10, nh3`"
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8e388c44",
+   "id": "26cffd2f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6901669",
+   "id": "f7bd8abb",
    "metadata": {},
    "source": [
     "**Feature Scaling:**\n",
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2b0f9311",
+   "id": "264d8622",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e3e37bf",
+   "id": "e173dee0",
    "metadata": {},
    "source": [
     "**Phân tách bộ dữ liệu thành 3 tập training set, validation set và test set:**\n",
@@ -289,7 +289,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0948f6ab",
+   "id": "0118cda3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ea92104",
+   "id": "451c8e8f",
    "metadata": {},
    "source": [
     "### 1. Mô hình Decision Tree"
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d82d762",
+   "id": "39467046",
    "metadata": {},
    "source": [
     "- Mô hình Decision Tree (cây quyết định) là một thuật toán học máy có cấu trúc dạng cây, chia dữ liệu dựa trên các quy tắc quyết định đơn giản. Mỗi nút lá của cây đại diện cho một nhãn hoặc một giá trị dự đoán, trong khi các nút gốc và nội bộ biểu diễn các quy tắc quyết định để chia tách dữ liệu.\n",
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5699a3f9",
+   "id": "61407902",
    "metadata": {},
    "source": [
     "**Tiến hành huấn luyện:**\n",
@@ -335,8 +335,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "a2c49c15",
+   "execution_count": 8,
+   "id": "54a59bd6",
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2c934cd",
+   "id": "a8ce0ac1",
    "metadata": {},
    "source": [
     "**Đánh giá:**\n",
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76b748e3",
+   "id": "70f76c10",
    "metadata": {},
    "source": [
     "**Cải thiện mô hình:**\n",
@@ -391,8 +391,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "0e54191d",
+   "execution_count": 10,
+   "id": "c515d8cb",
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95b8e26c",
+   "id": "5602ecf0",
    "metadata": {},
    "source": [
     "Như vậy ta đã có thông số params tốt nhất có thể tìm được trong tập các params đưa ra như trên, ta sẽ lưu lại thành `best_model` và đánh giá nó"
@@ -442,8 +442,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "df96b02f",
+   "execution_count": 11,
+   "id": "929a5e18",
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "576ac328",
+   "id": "7c61913b",
    "metadata": {},
    "source": [
     "**Dự đoán:**\n",
@@ -473,8 +473,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "15ed965d",
+   "execution_count": 12,
+   "id": "0f6e4a17",
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +496,7 @@
     }
    ],
    "source": [
-    "# Assume you have a new sample data\n",
+    "# Tạo sample data mới\n",
     "new_data = {\n",
     "    'no': 0.5,\n",
     "    'co': 700.3,\n",
@@ -508,13 +508,13 @@
     "    'nh3': 7.99\n",
     "}\n",
     "\n",
-    "# Convert the sample data into a DataFrame\n",
+    "# Chuyển sample data thành Dataframe\n",
     "new_df = pd.DataFrame([new_data])\n",
     "\n",
-    "# Standardize the new sample data using the same scaler\n",
+    "# Chuẩn hóa sample data\n",
     "new_sample = scaler.transform(new_df)\n",
     "\n",
-    "# Predict AQI for the new sample using the trained model\n",
+    "# Dữ đoán aqi sử dụng best_model vừa huấn luyện trên \n",
     "predicted_aqi = best_model_tree.predict(new_sample)\n",
     "\n",
     "print(f'Predicted AQI: {predicted_aqi}')"
@@ -523,7 +523,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7017ad9c",
+   "id": "02ac29c7",
    "metadata": {},
    "outputs": [],
    "source": []
