Update MLP neural network

--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -1145,10 +1145,9 @@
    "source": [
     "**Cải thiện mô hình:**\n",
     "- Các siêu tham có thể ảnh hưởng tới hiệu suất mô hình như sau:\n",
-    "    - Hidden_layer_sizes quyết định số lượng và kích thước của các lớp ẩn trong mô hình. Số lượng lớp ẩn càng lớn thì mô hình càng có thể học được các mối quan hệ phức tạp hơn trong dữ liệu, nhưng cũng dễ bị overfitting. Kích thước của lớp ẩn càng lớn thì mô hình càng có thể học được các mối quan hệ phức tạp hơn, nhưng cũng cần nhiều dữ liệu hơn để huấn luyện.\n",
+    "    - Hidden_layer_sizes: quyết định số lượng và kích thước của các lớp ẩn trong mô hình. Số lượng lớp ẩn càng lớn thì mô hình càng có thể học được các mối quan hệ phức tạp hơn trong dữ liệu, nhưng cũng dễ bị overfitting. Kích thước của lớp ẩn càng lớn thì mô hình càng có thể học được các mối quan hệ phức tạp hơn, nhưng cũng cần nhiều dữ liệu hơn để huấn luyện.\n",
     "    - Activation (Hàm kích hoạt): Hàm kích hoạt quyết định cách thức mà các nơ-ron trong mô hình xử lý thông tin.\n",
     "    - Solver: quyết định phương pháp tối ưu hóa được sử dụng để cập nhật trọng số và bias của mô hình.\n",
-    "    - Learning_rate: quyết định tốc độ mà mô hình học từ dữ liệu. Một learning_rate quá cao có thể khiến mô hình học quá nhanh và dễ bị overfitting, trong khi một learning_rate quá thấp có thể khiến mô hình học quá chậm và không thể đạt được hiệu suất tốt.\n",
     "\n",
     "Nhóm sẽ sử dụng ***GridSearchCV*** để cải thiện mô hình và tinh chỉnh các siêu tham số."
    ]
