--- a/data_collect.ipynb
+++ b/data_collect.ipynb
@@ -2,6 +2,57 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c0debfce",
+   "metadata": {},
+   "source": [
+    "<div style=\"text-align: left; background-color:#FFFFCC; font-family:Arial; color:#526085; padding: 12px; line-height:1.25;border-radius:1px; margin-bottom: 0em; text-align: center; font-size: 58px;border-style: solid;border-color: dark green;\">ĐỒ ÁN THỰC HÀNH</div>\n",
+    "<div style=\"text-align: left; background-color:#99FFFF; font-family: Arial; color:#551184; padding: 12px; line-height:1.25;border-radius:1px; margin-bottom: 0em; text-align: center; font-size: 18px\">Bộ môn: Nhập môn Khoa học Dữ liệu | Nhóm 8</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ecf32db",
+   "metadata": {},
+   "source": [
+    "# <div style=\"text-align: left; background-color:#0C6A86; font-family:Arial; color:white; padding: 12px; line-height:1.25;border-radius:1px; margin-bottom: 0em; text-align: center; font-size: 30px;border-style: solid;border-color: black;\">PHẦN 1. THU THẬP DỮ LIỆU</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8adc10a7",
+   "metadata": {},
+   "source": [
+    "## Bảng thành viên\n",
+    "|<center><div style=\"width:150px\">MSSV</div><center>|<center><div style=\"width:290px\">Họ và tên</div><center>|\n",
+    "|---------- |:-------------:|\n",
+    "| <center>21120091<center>  |<center>Hồ Sỹ Kiên<center> |\n",
+    "| <center>21120099<center>  | <center>Hoàng Thành Nam<center> |\n",
+    "| <center>21120035<center>  |   <center>Nguyễn Hoài An<center>   | \n",
+    "| <center>21120176<center>  |<center>Đinh Thị Thúy Hường<center> |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6dfd5c4",
+   "metadata": {},
+   "source": [
+    "## Giới thiệu đề tài"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca71d193",
+   "metadata": {},
+   "source": [
+    "- Trong những năm gần đây, ô nhiễm không khí đang trở thành một vấn đề môi trường nghiêm trọng trên toàn cầu. Theo báo cáo của Tổ chức Y tế Thế giới (WHO) năm 2022, ô nhiễm không khí là nguyên nhân gây tử vong cao thứ tư trên thế giới, chỉ đứng sau cao huyết áp, suy dinh dưỡng và hút thuốc lá. Ô nhiễm không khí gây ra khoảng 7 triệu ca tử vong sớm mỗi năm, trong đó 6,6 triệu ca tử vong xảy ra ở các nước đang phát triển.\n",
+    "\n",
+    "- Tình trạng ô nhiễm không khí ở Việt Nam cũng đang ở mức báo động. Theo báo cáo của Bộ Tài nguyên và Môi trường Việt Nam năm 2022, 80% các thành phố lớn ở Việt Nam có chất lượng không khí không đáp ứng các tiêu chuẩn của WHO.\n",
+    "\n",
+    "*-> Vì vậy phân tích chất lượng không khí là một công cụ quan trọng để theo dõi xu hướng ô nhiễm không khí, xác định các nguồn gây ô nhiễm và đánh giá tác động của ô nhiễm không khí đối với sức khỏe và môi trường. Đó cũng là lí do nhóm quyết định thu thập dữ liệu về chất lượng không khí ở các thành phố lớn, cụ thể là thành phố Hồ Chí Minh, để có những cái nhìn về chất lượng không khí nơi đó cũng như tại các thành phố lớn trên thế giới.*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f1f100af",
    "metadata": {},
    "source": [
