Update self assignment

--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -1757,9 +1757,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ecfa0bc4",
+   "metadata": {},
+   "source": [
+    "## Tự đánh giá"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "796c5241",
+   "metadata": {},
+   "source": [
+    "| STT | Họ tên | Khó khăn mắc phải | Bài học rút ra |\n",
+    "|---|---|---|---|\n",
+    "| 1 | Hồ Sỹ Kiên | Lần đầu sử dụng git nên còn nhiều bỡ ngỡ, chưa thực sự thành thạo. Tự cảm thấy phần đặt câu hỏi và trả lời chưa thực sự sâu sắc. Code còn hơi dài dòng và chưa thực sự tối ưu. | Giúp làm quen với git và cách làm việc nhóm trên git, cách quản lý và phân chia công việc trên Notion. Biết cách xây dựng một mô hình đơn giản thông qua các dữ liệu đã có. |\n",
+    "| 2 | Hoàng Thành Nam | Chưa có nhiều thời gian cho bài tập. Gặp rắc rối trong việc xử lí các kiểu biểu đồ minh hoạ. | Căn chỉnh thời gian phù hợp.  Học thêm về cách trực quan hóa bằng biểu đồ. |\n",
+    "| 3 | Nguyễn Hoài An | Chưa nắm rõ về các thuật toán để xây dụng mô hình. Code chưa thực sự tối ưu.| Học hỏi thêm về nhiều thuật toán. Biết sử dụng thêm các hàm thư viện có sẵn để tối ưu code. |\n",
+    "| 4 | Đinh Thị Thúy Hường | Chưa nắm rõ về các mô hình.Tự cảm thấy phần đặt câu hỏi và trả lời chưa thực sự sâu sắc, nếu có thời gian sẽ tìm hiểu về dữ liệu nhiều hơn để đưa ra một câu hỏi hay hơn. | Hiểu hơn về dữ liệu, thêm được nhiều kiến thức. |\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c4a985a",
+   "metadata": {},
+   "source": [
+    "**Nếu có nhiều thời gian hơn, nhóm em sẽ:**\n",
+    "- Tổ chức nhiều buổi họp hơn để cùng nhau thảo luận, tìm hiểu sâu hơn về thông tin dữ liệu mà nhóm đã thu thập. Từ đó nâng cao hiệu quả làm việc.\n",
+    "- Học cách tiền xử lý dữ liệu kĩ hơn để có thể loại bỏ các dữ liệu gây nhiễu hoặc các dữ liệu không có giá trị về mặt ý nghĩa gây ảnh hưởng đến mô hình học máy.\n",
+    "- Đưa ra các câu hỏi mang tính ý nghĩa, sâu sắc hơn nhằm khai thác triệt để hơn những thông tin mà dữ liệu mng lại.\n",
+    "- Tìm hiểu thêm về các mô hình học máy để tối ưu hơn hiệu quả của các mô hình.\n",
+    "- Hoàn thiện phân chia file notebook, tuân thủ clear-coding, viết code ngắn gọn và đơn\n",
+    "giản nhất có thể, chú thích tường minh cho từng bước xử lý.\n",
+    "- Hoàn thiện hơn slide thuyết trình về mặt nội dung và thẩm mỹ.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aab4af13",
+   "id": "3dd009e1",
    "metadata": {},
    "outputs": [],
    "source": []
